<resources>
    <string name="app_name">CryptocurrencyWalletApp</string>

    <!-- Login -->
    <string name="tv_login">Cryptocurrency Wallet</string>
    <string name="tv_username">Username:</string>
    <string name="et_username">Username</string>
    <string name="tv_password">Password:</string>
    <string name="et_password">Password</string>
    <string name="tv_register">Register</string>
    <string name="btn_sign_in">Sign In</string>

    <!-- Register -->
    <string name="tv_registration">Registration</string>
    <string name="tv_f_name">First Name:</string>
    <string name="et_f_name">First Name</string>
    <string name="tv_surname">Surname:</string>
    <string name="et_surname">Surname</string>
    <string name="tv_image">Image Url:</string>
    <string name="et_image">https://www.google.com</string>
    <string name="tv_email">Email:</string>
    <string name="et_email">user@gmail.com</string>
    <string name="tv_registered">Already Registered?</string>

    <!-- Coin List-->
    <string name="sv_hint"> Search for cryptocurrency </string>

    <!-- Coin Details -->
    <string name="tv_usd">United States Dollar (USD):</string>
    <string name="tv_gbp">Great British Pound (GBP):</string>
    <string name="tv_eur">European Union (EURO):</string>
    <string name="tv_cny">Chinese Yuan (CNY):</string>


    <!--User Profile-->
    <string name="btn_edit_user">Edit Details</string>
    <string name="tv_joined">Joined: </string>
    <!--Update User-->
    <string name="btn_update">Update</string>
    <string name="btn_cancel">Exit</string>
    <string name="tv_update">Update Details</string>

    <!--Wallet Dialog-->
    <string name="tv_title">Title: </string>
    <string name="et_title">Title </string>
    <string name="btn_insert">Insert</string>

    <!-- Add Coin to Wallet Dialog-->
    <string name="btn_add_coin">Add Coin to Wallet</string>
    <string name="tv_wallets">Wallets</string>

</resources>