<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>


<androidx.cardview.widget.CardView
    app:cardBackgroundColor="@color/c_dark_grey"
    tools:context=".presentation.userProfile.UpdateUserDialogFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <ImageButton
        android:contentDescription="@string/btn_cancel"
        android:background="@color/c_dark_grey"
        app:tint="@color/white"
        android:padding="15sp"
        android:layout_gravity="end"
        android:theme="@style/FontSizeSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close"
        android:id="@+id/button_cancel"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:padding="15sp"
        android:layout_margin="15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/FontSizeLarge"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/tv_update"
            android:textAlignment="center"/>
        <include layout ="@layout/line_view"/>
        <TextView
            android:padding="5sp"
            android:textStyle="bold"
            android:textColor="@color/c_light_grey"
            android:theme="@style/FontSizeSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_f_name"/>
        <EditText
            android:padding="5sp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="textPersonName"
            android:autofillHints="name"
            android:minHeight="48dp"
            android:hint="@string/et_f_name"
            android:theme="@style/FontSizeSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_text_first_name"/>
        <TextView
            android:padding="5sp"
            android:textStyle="bold"
            android:textColor="@color/c_light_grey"
            android:theme="@style/FontSizeSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_surname"/>
        <EditText
            android:padding="5sp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:minHeight="48dp"
            android:inputType="textPersonName"
            android:autofillHints="name"
            android:hint="@string/et_surname"
            android:theme="@style/FontSizeSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_text_last_name"/>
        <TextView
            android:padding="5sp"
            android:textStyle="bold"
            android:textColor="@color/c_light_grey"
            android:theme="@style/FontSizeSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_username"/>
        <EditText
            android:padding="5sp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="text"
            android:autofillHints="username"
            android:minHeight="48dp"
            android:hint="@string/et_username"
            android:theme="@style/FontSizeSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_text_username"/>
        <TextView
            android:padding="5sp"
            android:textStyle="bold"
            android:textColor="@color/c_light_grey"
            android:theme="@style/FontSizeSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_password"/>
        <EditText
            android:padding="5sp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:minHeight="48dp"
            android:hint="@string/et_password"
            android:theme="@style/FontSizeSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_text_password"/>

        <TextView
            android:padding="5sp"
            android:textStyle="bold"
            android:textColor="@color/c_light_grey"
            android:theme="@style/FontSizeSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_email"/>
        <EditText
            android:padding="5sp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            android:minHeight="48dp"
            android:hint="@string/et_email"
            android:theme="@style/FontSizeSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_text_email"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15sp"
            android:layout_margin="20sp"
            android:orientation="horizontal">

            <Button
                android:background="@drawable/bg_rounded_button_grey"
                android:textColor="@color/white"
                android:theme="@style/FontSizeSmall"
                android:text="@string/btn_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_update"/>
        </LinearLayout>
            </LinearLayout>
    </ScrollView>
    </LinearLayout>
</androidx.cardview.widget.CardView>

</layout>