<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/black">


            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_centerHorizontal="true"
                android:background="@android:color/black"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:theme="@style/FontSizeSmall"
                    android:text="@string/tv_registration" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20sp"
                    android:layout_margin="15sp"
                    android:background="@android:color/black"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_registered"
                        android:textStyle="italic"
                        android:id="@+id/text_view_login"
                        android:textColor="@android:color/holo_blue_light"/>
                    <TextView
                        android:textColor="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/FontSizeMedium"
                        android:text="@string/tv_f_name"/>
                    <EditText
                        android:textColor="@color/white"
                        android:maxWidth="480dp"
                        android:autofillHints="name"
                        android:id="@+id/edit_text_fname"
                        android:layout_width="match_parent"
                        android:theme="@style/FontSizeSmall"
                        android:padding="10sp"
                        android:inputType="text"
                        android:layout_height="55sp"
                        android:hint="@string/et_f_name"/>
                    <TextView
                        android:layout_marginTop="10sp"
                        android:layout_width="match_parent"
                        android:textColor="@color/white"
                        android:theme="@style/FontSizeSmall"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_surname"/>
                    <EditText
                        android:maxWidth="480dp"
                        android:padding="10sp"
                        android:textColor="@color/c_white"
                        android:autofillHints="name"
                        android:id="@+id/edit_text_surname"
                        android:layout_width="match_parent"
                        android:theme="@style/FontSizeSmall"
                        android:inputType="textUri"
                        android:layout_height="55sp"
                        android:hint="@string/et_surname"/>
                    <TextView
                        android:layout_marginTop="10sp"
                        android:textColor="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/FontSizeMedium"
                        android:text="@string/tv_username"/>
                    <EditText
                        android:textColor="@color/white"
                        android:maxWidth="480dp"
                        android:autofillHints="username"
                        android:id="@+id/edit_text_username"
                        android:layout_width="match_parent"
                        android:theme="@style/FontSizeSmall"
                        android:padding="10sp"
                        android:inputType="text"
                        android:layout_height="55sp"
                        android:hint="@string/et_username"/>
                    <TextView
                        android:layout_marginTop="10sp"
                        android:layout_width="match_parent"
                        android:textColor="@color/white"
                        android:theme="@style/FontSizeMedium"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_password"/>
                    <EditText
                        android:maxWidth="480dp"
                        android:padding="10sp"
                        android:textColor="@color/c_white"
                        android:autofillHints="password"
                        android:id="@+id/edit_text_password"
                        android:layout_width="match_parent"
                        android:theme="@style/FontSizeSmall"
                        android:inputType="textPassword"
                        android:layout_height="55sp"
                        android:hint="@string/et_password"/>
                    <TextView
                        android:layout_marginTop="10sp"
                        android:layout_width="match_parent"
                        android:textColor="@color/white"
                        android:theme="@style/FontSizeSmall"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_email"/>
                    <EditText
                        android:maxWidth="480dp"
                        android:padding="10sp"
                        android:textColor="@color/c_white"
                        android:autofillHints="emailAddress"
                        android:id="@+id/edit_text_email"
                        android:layout_width="match_parent"
                        android:theme="@style/FontSizeSmall"
                        android:inputType="textEmailAddress"
                        android:layout_height="55sp"
                        android:hint="@string/et_email"/>
                    <TextView
                        android:layout_marginTop="10sp"
                        android:layout_width="match_parent"
                        android:textColor="@color/white"
                        android:theme="@style/FontSizeSmall"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_image"/>
                    <EditText
                        android:maxWidth="480dp"
                        android:padding="10sp"
                        android:textColor="@color/c_white"
                        android:autofillHints=""
                        android:id="@+id/edit_text_image"
                        android:layout_width="match_parent"
                        android:theme="@style/FontSizeSmall"
                        android:inputType="textUri"
                        android:layout_height="55sp"
                        android:hint="@string/et_image"/>

                    <Button
                        android:textColor="@color/white"
                        android:maxWidth="300dp"
                        android:layout_marginTop="30sp"
                        android:id="@+id/button_register"
                        android:theme="@style/FontSizeMedium"
                        android:layout_width="match_parent"
                        android:text="@string/tv_register"
                        android:layout_height="wrap_content"/>

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

        </RelativeLayout>

</layout>