<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/c_dark_grey"
        tools:context=".presentation.userLogin.LoginActivity">
        <RelativeLayout
            android:id="@+id/relative_layout_splash"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/black"
            tools:ignore="UselessParent">


            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                app:lottie_rawRes="@raw/crypto_coins"
                app:lottie_loop="true"
                app:lottie_autoPlay="true"
                />

        </RelativeLayout>
        <RelativeLayout
        android:id="@+id/relative_layout_login"
        android:layout_width="match_parent"
        tools:ignore="UselessParent"
        android:layout_height="match_parent">
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_centerInParent="true"
            app:cardBackgroundColor="@color/c_dark_grey"
            app:cardCornerRadius="2dp"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="40sp"
                android:layout_margin="15sp"
                android:background="@android:color/transparent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:padding="2sp"
                    android:textColor="@android:color/white"
                    android:theme="@style/FontSizeLarge"
                    android:text="@string/tv_login" />
                <include layout="@layout/line_view"/>
                <TextView
                    android:textColor="@android:color/holo_red_light"
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:padding="10sp"
                    android:id="@+id/text_view_error"
                    android:layout_height="wrap_content"
                    android:theme="@style/FontSizeSmall"
                    tools:text="Error"/>

                <TextView
                    android:textStyle="bold"
                    android:textColor="@color/c_light_grey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/FontSizeMedium"
                    android:text="@string/tv_username"/>
                <EditText
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:maxWidth="480dp"
                    android:autofillHints="username"
                    android:id="@+id/edit_text_username"
                    android:layout_width="match_parent"
                    android:theme="@style/FontSizeMedium"
                    android:padding="10sp"
                    android:inputType="text"
                    android:layout_height="55sp"
                    android:hint="@string/et_username"/>
                <TextView

                    android:layout_marginTop="30sp"
                    android:layout_width="match_parent"
                    android:textStyle="bold"
                    android:textColor="@color/c_light_grey"
                    android:theme="@style/FontSizeMedium"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_password"/>
                <EditText
                    android:textColorHint="@color/white"
                    android:maxWidth="480dp"
                    android:padding="10sp"
                    android:minHeight="48dp"
                    android:textColor="@color/c_white"
                    android:autofillHints="password"
                    android:id="@+id/edit_text_password"
                    android:layout_width="match_parent"
                    android:theme="@style/FontSizeMedium"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_password"/>
                <Button
                    android:textColor="@color/white"
                    android:maxWidth="300dp"
                    android:layout_marginTop="30sp"
                    android:id="@+id/button_login"
                    android:background="@drawable/bg_rounded_button_grey"
                    android:theme="@style/FontSizeMedium"
                    android:layout_width="match_parent"
                    android:text="@string/btn_sign_in"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textColor="@android:color/holo_blue_light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/FontSizeSmall"
                    android:id="@+id/text_view_register"
                    android:text="@string/tv_register"
                    android:textAlignment="center"/>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>

    </RelativeLayout>
</layout>